# PathPlanner3D

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh_CN.md  pyproject.toml
backend/: pyproject.toml
backend/algorithm/: pyproject.toml
backend/algorithm/src/pp3d/: __init__.py
backend/algorithm/src/pp3d/algorithm/: __init__.py
backend/algorithm/src/pp3d/algorithm/genetic/: __init__.py  genetic.py
backend/algorithm/src/pp3d/algorithm/hybrid/: pso_ga_hybrid.py
backend/algorithm/src/pp3d/algorithm/pso/: __init__.py
backend/algorithm/src/pp3d/common/: __init__.py  types.py
backend/algorithm/tests/unittests/pp3d/algorithm/hybrid/: test_pso_ga_hybrid.py
backend/algorithm/tests/unittests/pp3d/algorithm/pso/: test_pso.py
backend/api/: pyproject.toml
backend/api/src/pp3d_api/: __init__.py  main.py  models.py  planner.py  routes.py
backend/api/tests/: test_api.py
backend/core/src/pp3d/algorithm/hybrid/: __init__.py  pso_ga_hybrid.py
backend/core/src/pp3d/algorithm/pso/: pso.py
backend/core/tests/unittests/pp3d/algorithm/genetic/: test_genetic.py
backend/core/tests/unittests/pp3d/algorithm/hybrid/: test_pso_ga_hybrid.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: CodeWorkspace.tsx  MetricsPanel.tsx  ParameterPanel.tsx  TerrainScene.tsx
frontend/src/data/: codeTemplates.ts  simulation.ts
frontend/src/services/: plannerApi.ts
src/pp3d/algorithm/genetic/: genetic.py  types.py
src/pp3d/algorithm/hybrid/: dynamic_pso.py  dynamic_weights_pso.py  pso_ga_hybrid.py  pso_types.py  types.py
src/pp3d/algorithm/pso/: pso.py  types.py
src/pp3d/common/: algorithm_utils.py  collision_detection.py  decorators.py  streamlit_widgets.py
src/pp3d/playground/: code_template.py  constants.py  dynamic_pso_algorithm_playground.py  dynamic_weights_pso_algorithm_playground.py  ga_playground.py  genetic_algorithm_playground.py  i18n.py  playground.py  pso_algorithm_playground.py  pso_ga_hybrid_playground.py  pso_playground.py  types.py
src/pp3d/visualization/: plotly_utils.py
tests/unittests/: test_pso.py
tests/unittests/pp3d/algorithm/pso/: test_pso.py
