[project]
name = "path-planner-3d"
version = "0.1.0"
description = "A Python-based research framework for 3D path planning with terrain awareness, including algorithms, simulation, and visualization tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "ruff>=0.12.12",
]
