[project]
name = "pp3d"
version = "0.1.0"
description = "A Python-based research framework for 3D path planning with terrain awareness, including algorithms, simulation, and visualization tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "streamlit>=1.49.1",
    "streamlit-monaco-editor>=0.1.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "ruff>=0.12.12",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["README.md"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pp3d --cov-report=term --cov-report=html --cov-report=xml --html=pytest/report.html"
