[project]
name = "pp3d-core"
version = "0.3.0"
description = "Terrain-aware 3D path-planning algorithms and numerical utilities."
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "codeboyzhou", email = "zhouchen9118@foxmail.com" },
]
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "scipy>=1.16.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pp3d"]
