[project]
name = "pp3d-core"
version = "0.3.0"
description = "Terrain-aware 3D path-planning algorithms and numerical utilities."
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "codeboyzhou", email = "zhouchen9118@foxmail.com" },
]
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pp3d"]
